feat: add the template for the presentation request

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,6 +59,7 @@
         "no-with": 2,
         "no-multi-spaces": 2,
         "no-multiple-empty-lines": 2,
+        "no-mixed-spaces-and-tabs": 0,
         "complexity": ["error", 8],
         "prefer-spread": 2,
         "prefer-arrow-callback": 2,
@@ -66,7 +67,7 @@
         "max-classes-per-file": ["error", 1],
         "max-depth":  ["error", 4],
         "max-lines": ["error", {"max": 400, "skipComments": true}],
-        "max-lines-per-function": ["error", {"max": 3, "IIFEs": true, "skipComments": true}],
+        "max-lines-per-function": ["error", {"max": 70, "IIFEs": true, "skipComments": true}],
         "max-nested-callbacks": ["error", 3],
         "max-params": ["error", 6],
         "max-statements": ["error", 10],
