--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/codemirror": "^5.60.7",
     "codemirror": "^6.0.1",
     "jwt-decode": "^3.1.2",
+    "qrcodejs": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
