--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@types/codemirror": "^5.60.7",
+    "@types/crypto-js": "^4.1.1",
     "codemirror": "^6.0.1",
+    "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "qrcodejs": "^1.0.0",
     "rxjs": "~7.8.0",
