--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: CI
 on:
   pull_request:
-    branches: ['**']
+    types: [opened, reopened]
   push:
-    branches: ['**']
-    tags: [v*]
 
 permissions:
   contents: read
