EUDIW-767: fix node version in Docker file

--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,8 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
-              "crypto-js"
+              "crypto-js",
+              "cbor-js"
             ],
             "outputPath": "dist/verifier-ui",
             "index": "src/index.html",
