--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
+    "@angular/cdk": "15.2.9",
     "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.9",
     "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.9",
+    "@angular/material": "15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@types/codemirror": "^5.60.7",
+    "@types/crypto-js": "^4.1.1",
     "codemirror": "^6.0.1",
+    "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "qrcodejs": "^1.0.0",
     "rxjs": "~7.8.0",
@@ -33,13 +37,13 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.5",
+    "@angular-devkit/build-angular": "^15.2.9",
     "@angular-eslint/builder": "15.2.1",
     "@angular-eslint/eslint-plugin": "15.2.1",
     "@angular-eslint/eslint-plugin-template": "15.2.1",
     "@angular-eslint/schematics": "15.2.1",
     "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.2.5",
+    "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
