--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
-    "cbor-js": "^0.1.0",
+    "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
+    "cbor-bigdecimal": "^9.0.0",
+    "cbor-web": "8.0.1",
     "codemirror": "^6.0.1",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
+    "nofilter": "^4.0.2",
     "qrcodejs": "^1.0.0",
     "rxjs": "~7.8.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
