Feature/cbor decoding (#14)
* Decode vp_token tha comes as CBOR encoded 



---------

Co-authored-by: ppapasavvas <pantelis.papasavvas@netcompany-intrasoft.com>
Co-authored-by: VAFEIADIS Nikos <nvafeiadis@intrasoft-intl.com>
Co-authored-by: ATH\agalanop <Apostolos.Galanopoulos@intrasoft-intl.com>
Co-authored-by: Apostolos GALANOPOULOS <Apostolos.GALANOPOULOS@netcompany.com>

--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,10 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
-              "crypto-js"
+              "crypto-js",
+              "cbor-web",
+              "cbor-bigdecimal",
+              "buffer"
             ],
             "outputPath": "dist/verifier-ui",
             "index": "src/index.html",
