--- a/angular.json
+++ b/angular.json
@@ -36,9 +36,15 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/custom-theme.scss",
+              "src/styles.scss",
+              "src/reset.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/template.sass"
+              ]
+            },
             "scripts": [
               "./node_modules/qrcodejs/qrcode.min.js"
             ]
@@ -113,9 +119,15 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/custom-theme.scss",
+              "src/styles.scss",
+              "src/reset.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/template.sass"
+              ]
+            },
             "scripts": [],
             "karmaConfig": "karma.conf.js"
           }
