--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/theme-one-dark": "^6.1.2",
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
     "bignumber.js": "^9.1.2",
@@ -39,6 +38,7 @@
     "qrcodejs": "^1.0.0",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
+    "thememirror": "^2.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
