--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "npm run config && ng build --watch --configuration=development",
     "config": "node set-env.js",
     "test": "ng test",
+    "test:coverage": "ng test --code-coverage",
     "stylelint": "npx stylelint \"src/**/*.{css,scss}\" --fix",
     "lint": "ng lint --fix",
     "pre-build": "test && lint"
@@ -25,7 +26,6 @@
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/theme-one-dark": "^6.1.2",
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
     "bignumber.js": "^9.1.2",
@@ -39,6 +39,7 @@
     "qrcodejs": "^1.0.0",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
+    "thememirror": "^2.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -52,6 +53,7 @@
     "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.10",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "cypress": "^12.10.0",
