DEV: fixes for sonarqube errors and responsive design

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -41,7 +41,8 @@
                   "mixin",
                   "return",
                   "warn",
-                  "while"
+                  "while",
+                  "use"
               ]
           }
       ]
