--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@codemirror/lang-json": "^6.0.1",
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
+    "@types/uuid": "10.0.0",
     "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
     "cbor-x": "^1.6.0",
