--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifier-ui",
-  "version": "0.5.2-SNAPSHOT",
+  "version": "0.6.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run config && ng serve --proxy-config src/proxy.conf.json",
@@ -37,7 +37,7 @@
     "jsonpath-plus": "^9.0.0",
     "jwt-decode": "3.1.2",
     "nofilter": "^4.0.2",
-    "qrcodejs": "^1.0.0",
+    "angularx-qrcode": "^15.0.1",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
     "thememirror": "^2.0.1",
