--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.scss",
-              "src/reset.scss"
+              "src/reset.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
