--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "stream-browserify": "^3.0.0",
     "thememirror": "^2.0.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "ngx-toastr": "16.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
