--- a/.github/workflows/publish-to-container-registry.yml
+++ b/.github/workflows/publish-to-container-registry.yml
@@ -1,9 +1,9 @@
 name: Publish to container registry
 
 on:
-  push:
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+  #push:
+  #  # Publish semver tags as releases.
+  #  tags: [ 'v*.*.*' ]
   workflow_dispatch:
 
 env:
