--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,8 +1,8 @@
 name: SAST - SonarCloud Caller
 on:
-  push:
-    branches-ignore:
-      - 'dependabot/**'
+  #push:
+  #  branches-ignore:
+  #    - 'dependabot/**'
   pull_request_target:
   workflow_dispatch:
 
