Fixed build issue

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run config && ng serve --proxy-config src/proxy.conf.json",
-    "build": "npm run config && ng build --build-optimizer --configuration=production",
+    "build": "npm run config && ng build --configuration=production",
     "watch": "npm run config && ng build --watch --configuration=development",
     "config": "node set-env.js",
     "test": "ng test",
