--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run config && ng serve --proxy-config src/proxy.conf.json",
-    "build": "npm run config && ng build --build-optimizer --configuration=production",
+    "build": "npm run config && ng build --configuration=production",
     "watch": "npm run config && ng build --watch --configuration=development",
     "config": "node set-env.js",
     "test": "ng test",
@@ -15,16 +15,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.9",
-    "@angular/cdk": "15.2.9",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.2.9",
-    "@angular/material": "15.2.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
+    "@angular/animations": "^19.1.3",
+    "@angular/cdk": "19.1.1",
+    "@angular/common": "^19.1.3",
+    "@angular/compiler": "^19.1.3",
+    "@angular/core": "^19.1.3",
+    "@angular/forms": "^19.1.3",
+    "@angular/material": "19.1.1",
+    "@angular/platform-browser": "^19.1.3",
+    "@angular/platform-browser-dynamic": "^19.1.3",
+    "@angular/router": "^19.1.3",
     "@codemirror/lang-json": "^6.0.1",
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
@@ -35,25 +35,25 @@
     "codemirror": "^6.0.1",
     "crypto-js": "^4.1.1",
     "jsonpath-plus": "^9.0.0",
-    "jwt-decode": "3.1.2",
+    "jwt-decode": "^3.0.0",
     "nofilter": "^4.0.2",
-    "angularx-qrcode": "^15.0.1",
+    "angularx-qrcode": "^19.0.0",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
     "thememirror": "^2.0.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
+    "zone.js": "~0.15.0",
     "ngx-toastr": "16.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.9",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.2.9",
-    "@angular/compiler-cli": "^15.2.9",
+    "@angular-devkit/build-angular": "^19.1.4",
+    "@angular-eslint/builder": "^19.0.0",
+    "@angular-eslint/eslint-plugin": "^19.0.0",
+    "@angular-eslint/eslint-plugin-template": "^19.0.0",
+    "@angular-eslint/schematics": "^19.0.0",
+    "@angular-eslint/template-parser": "^19.0.0",
+    "@angular/cli": "~19.1.4",
+    "@angular/compiler-cli": "^19.1.3",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.10",
     "@types/node": "^22.6.1",
@@ -73,6 +73,6 @@
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^8.0.0",
     "stylelint-order": "^6.0.3",
-    "typescript": "~4.9.4"
+    "typescript": "~5.5.4"
   }
 }
