--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifier-ui",
-  "version": "0.6.1",
+  "version": "0.6.1-fix1",
   "scripts": {
     "ng": "ng",
     "start": "npm run config && ng serve --proxy-config src/proxy.conf.json",
