--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifier-ui",
-  "version": "0.6.2-SNAPSHOT",
+  "version": "0.6.1-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "npm run config && ng serve --proxy-config src/proxy.conf.json",
@@ -42,8 +42,7 @@
     "stream-browserify": "^3.0.0",
     "thememirror": "^2.0.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "ngx-toastr": "16.2.0"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
