--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@angular-eslint/template-parser": "^19.0.0",
     "@angular/cli": "~19.1.4",
     "@angular/compiler-cli": "^19.1.3",
-    "@types/jasmine": "~4.3.0",
+    "@types/jasmine": "^5.1.7",
     "@types/jest": "^29.5.10",
     "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "5.48.2",
