--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.3",
+    "@angular/animations": "^20.3.15",
     "@angular/cdk": "19.1.1",
-    "@angular/common": "^19.1.3",
-    "@angular/compiler": "^19.1.3",
-    "@angular/core": "^19.1.3",
-    "@angular/forms": "^19.1.3",
+    "@angular/common": "^20.3.15",
+    "@angular/compiler": "^20.3.15",
+    "@angular/core": "^20.3.15",
+    "@angular/forms": "^20.3.15",
     "@angular/material": "19.1.1",
-    "@angular/platform-browser": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^19.1.3",
-    "@angular/router": "^19.1.3",
+    "@angular/platform-browser": "^20.3.15",
+    "@angular/platform-browser-dynamic": "^20.3.15",
+    "@angular/router": "^20.3.15",
     "@codemirror/lang-json": "^6.0.1",
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
@@ -46,14 +46,14 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.4",
     "@angular-eslint/builder": "^19.0.0",
     "@angular-eslint/eslint-plugin": "^19.0.0",
     "@angular-eslint/eslint-plugin-template": "^19.0.0",
     "@angular-eslint/schematics": "^19.0.0",
     "@angular-eslint/template-parser": "^19.0.0",
-    "@angular/cli": "~19.1.4",
-    "@angular/compiler-cli": "^19.1.3",
+    "@angular/build": "^20.3.13",
+    "@angular/cli": "~20.3.13",
+    "@angular/compiler-cli": "^20.3.15",
     "@types/jasmine": "^5.1.7",
     "@types/jest": "^29.5.10",
     "@types/node": "^22.6.1",
@@ -73,6 +73,6 @@
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^8.0.0",
     "stylelint-order": "^6.0.3",
-    "typescript": "~5.5.4"
+    "typescript": "~5.9.3"
   }
 }
