--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
@@ -44,7 +44,7 @@
       ],
       "@network/*": [
         "src/app/core/network/*"
-      ],
+      ]
     },
     "types": [
       "jest",
