Fixed minor upgrade issues

--- a/angular.json
+++ b/angular.json
@@ -124,7 +124,8 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/template.sass"
+                "src/template.sass",
+                "."
               ]
             },
             "scripts": [],
